apps/portal/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
    app.kubernetes.io/version: 22.08.1
  name: homer
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: homer
      app.kubernetes.io/part-of: homer
  template:
    metadata:
      annotations:
        checksum.config/md5: f27c89437d1df2c58372f451061e2682
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: homer
        app.kubernetes.io/part-of: homer
        app.kubernetes.io/version: 22.08.1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - homer
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - image: b4bz/homer:v22.08.1
        imagePullPolicy: IfNotPresent
        name: homer
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 10m
            memory: 10Mi
          requests:
            cpu: 1m
            memory: 5Mi
        volumeMounts:
        - mountPath: /www/assets/config.yml
          name: config
          subPath: config.yml
      restartPolicy: Always
      serviceAccountName: homer
      volumes:
      - configMap:
          name: homer-config
        name: config
