apps/portal/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/version: 0.6.21
  name: homepage
  namespace: portal
spec:
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
