apps/portal/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/version: 0.6.21
  name: homepage
  namespace: portal
spec:
  ingressClassName: nginx
  rules:
  - host: portal.krupa.net.pl
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - portal.krupa.net.pl
    secretName: homepage-tls
